unpackaged/main/default/objects/Case/fields/CM_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>CM_Approval_Date__c</fullName>
    <label>CM Approval Date</label>
    <type>Date</type>
</CustomField>