unpackaged/main/default/objects/Case/fields/COA__c.field-meta.xml
<CustomField>
    <fullName>COA__c</fullName>
    <label>COA</label>
    <type>Date</type>
</CustomField>