unpackaged/main/default/objects/Case/fields/COC__c.field-meta.xml
<CustomField>
    <fullName>COC__c</fullName>
    <label>COC</label>
    <type>Date</type>
</CustomField>