unpackaged/main/default/objects/Case/fields/Comm_Memo__c.field-meta.xml
<CustomField>
    <fullName>Comm_Memo__c</fullName>
    <label>Comm Memo</label>
    <type>Date</type>
</CustomField>