unpackaged/main/default/objects/Case/fields/Company_Cost__c.field-meta.xml
<CustomField>
    <fullName>Company_Cost__c</fullName>
    <label>Company Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>