unpackaged/main/default/objects/Case/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Date</type>
</CustomField>