unpackaged/main/default/objects/Case/fields/Concern_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Concern_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concern Resolved?</label>
    <type>Checkbox</type>
</CustomField>