unpackaged/main/default/objects/Case/fields/Construction_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Case_Type__c</fullName>
    <label>Construction Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed Inspections</fullName>
            </value>
            <value>
                <fullName>Workmanship Failures</fullName>
            </value>
            <value>
                <fullName>Home Repair</fullName>
            </value>
            <value>
                <fullName>Customer Complaints</fullName>
            </value>
            <value>
                <fullName>Metal Roofs</fullName>
            </value>
            <value>
                <fullName>Ground Mounts</fullName>
            </value>
            <value>
                <fullName>Trenching</fullName>
            </value>
            <value>
                <fullName>Rafter Upgrades</fullName>
            </value>
            <value>
                <fullName>M.P.U.</fullName>
            </value>
            <value>
                <fullName>Past Due Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>