unpackaged/main/default/objects/Case/fields/Construction_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Sub_Type__c</fullName>
    <label>Construction Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Construction_Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC tie in</fullName>
            </value>
            <value>
                <fullName>Best practices (catch all)</fullName>
            </value>
            <value>
                <fullName>Clearances</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Corrugated</fullName>
            </value>
            <value>
                <fullName>DC wire pull</fullName>
            </value>
            <value>
                <fullName>Debris</fullName>
            </value>
            <value>
                <fullName>Designed</fullName>
            </value>
            <value>
                <fullName>Dig safe</fullName>
            </value>
            <value>
                <fullName>Drywall</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Electrical layout</fullName>
            </value>
            <value>
                <fullName>Field BOM change</fullName>
            </value>
            <value>
                <fullName>Field design change</fullName>
            </value>
            <value>
                <fullName>Fire set back</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Ground Fault</fullName>
            </value>
            <value>
                <fullName>Gutter</fullName>
            </value>
            <value>
                <fullName>Isolation Leak</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Paperwork</fullName>
            </value>
            <value>
                <fullName>Permitted</fullName>
            </value>
            <value>
                <fullName>Pictures</fullName>
            </value>
            <value>
                <fullName>Planning\Material</fullName>
            </value>
            <value>
                <fullName>Racked</fullName>
            </value>
            <value>
                <fullName>Ridge Cap</fullName>
            </value>
            <value>
                <fullName>Rip &amp; Replace</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>