unpackaged/main/default/objects/Case/fields/Consumption_Calculator_Form__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Calculator_Form__c</fullName>
    <label>Consumption Calculator Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>