unpackaged/main/default/objects/Case/fields/Cost_for_replacement__c.field-meta.xml
<CustomField>
    <fullName>Cost_for_replacement__c</fullName>
    <label>Cost for replacement</label>
    <type>Date</type>
</CustomField>