unpackaged/main/default/objects/Case/fields/Credit_Expired__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expired__c</fullName>
    <label>Credit Expired</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>