unpackaged/main/default/objects/Case/fields/CS_Notes__c.field-meta.xml
<CustomField>
    <fullName>CS_Notes__c</fullName>
    <label>CS Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>