unpackaged/main/default/objects/Case/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <formula>Opportunity__r.Address__c</formula>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>