unpackaged/main/default/objects/Case/fields/Customer_Experience_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Experience Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>