unpackaged/main/default/objects/Case/fields/Customer_Hasn_t_Confirmed_Reroof__c.field-meta.xml
<CustomField>
    <fullName>Customer_Hasn_t_Confirmed_Reroof__c</fullName>
    <label>Customer Hasn't Confirmed Reroof</label>
    <type>Date</type>
</CustomField>