unpackaged/main/default/objects/Case/fields/Customer_Hasn_t_Removed_Trees__c.field-meta.xml
<CustomField>
    <fullName>Customer_Hasn_t_Removed_Trees__c</fullName>
    <label>Customer Hasn't Removed Trees</label>
    <type>Date</type>
</CustomField>