unpackaged/main/default/objects/Case/fields/Customer_Issue_Hold__c.field-meta.xml
<CustomField>
    <fullName>Customer_Issue_Hold__c</fullName>
    <label>Customer Issue/Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress - Block Permitting</fullName>
            </value>
            <value>
                <fullName>In Progress - Block Install</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>