unpackaged/main/default/objects/Case/fields/Customer_Non_responsive__c.field-meta.xml
<CustomField>
    <fullName>Customer_Non_responsive__c</fullName>
    <label>Customer Non-responsive</label>
    <type>Date</type>
</CustomField>