unpackaged/main/default/objects/Case/fields/Customer_Not_Scheduling_Install__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_Scheduling_Install__c</fullName>
    <label>Customer Not Scheduling Install</label>
    <type>Date</type>
</CustomField>