unpackaged/main/default/objects/Case/fields/Customer_Not_Scheduling_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_Scheduling_Survey__c</fullName>
    <label>Customer Not Scheduling Survey</label>
    <type>Date</type>
</CustomField>