unpackaged/main/default/objects/Case/fields/Customer_Not_Signing_Documents__c.field-meta.xml
<CustomField>
    <fullName>Customer_Not_Signing_Documents__c</fullName>
    <label>Customer Not Signing Documents</label>
    <type>Date</type>
</CustomField>