unpackaged/main/default/objects/Case/fields/Customer_Paid_fee__c.field-meta.xml
<CustomField>
    <fullName>Customer_Paid_fee__c</fullName>
    <label>Customer Paid fee</label>
    <type>Date</type>
</CustomField>