unpackaged/main/default/objects/Case/fields/Customer_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review_Date__c</fullName>
    <label>Customer Review Date</label>
    <type>Date</type>
</CustomField>