unpackaged/main/default/objects/Case/fields/Customer_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Review_Notes__c</fullName>
    <label>Customer Review Notes</label>
    <length>20</length>
    <type>Text</type>
</CustomField>