unpackaged/main/default/objects/Case/fields/Customer_Unresponsive_Other__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unresponsive_Other__c</fullName>
    <label>Customer Unresponsive Other</label>
    <type>Date</type>
</CustomField>