unpackaged/main/default/objects/Case/fields/Customer_Unresponsive_to_Adder_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unresponsive_to_Adder_Inclusion__c</fullName>
    <label>Customer Unresponsive to Adder Inclusion</label>
    <type>Date</type>
</CustomField>