unpackaged/main/default/objects/Case/fields/Customer_Unresponsive_to_Design_Change__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unresponsive_to_Design_Change__c</fullName>
    <label>Customer Unresponsive to Design Change</label>
    <type>Date</type>
</CustomField>