unpackaged/main/default/objects/Case/fields/Customer_Unresponsive_to_Requests_for_Do__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unresponsive_to_Requests_for_Do__c</fullName>
    <label>Customer Unresponsive to Requests for Do</label>
    <type>Date</type>
</CustomField>