unpackaged/main/default/objects/Case/fields/Customer_Unresponsive_to_Requests_to_Sch__c.field-meta.xml
<CustomField>
    <fullName>Customer_Unresponsive_to_Requests_to_Sch__c</fullName>
    <label>Customer Unresponsive to Requests to Sch</label>
    <type>Date</type>
</CustomField>