unpackaged/main/default/objects/Case/fields/Damage_to_property__c.field-meta.xml
<CustomField>
    <fullName>Damage_to_property__c</fullName>
    <label>Damage to property</label>
    <type>Date</type>
</CustomField>