unpackaged/main/default/objects/Case/fields/Date_Queued_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Date_Queued_for_Cancellation__c</fullName>
    <label>Date Queued for Cancellation</label>
    <type>Date</type>
</CustomField>