unpackaged/main/default/objects/Case/fields/Date_to_Revisit_for_Holds__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Revisit_for_Holds__c</fullName>
    <label>Date to Revisit (for Holds)</label>
    <type>Date</type>
</CustomField>