unpackaged/main/default/objects/Case/fields/Decided_Against_Solar__c.field-meta.xml
<CustomField>
    <fullName>Decided_Against_Solar__c</fullName>
    <label>Decided Against Solar</label>
    <type>Date</type>
</CustomField>