unpackaged/main/default/objects/Case/fields/Delay_in_AHJ_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_AHJ_Inspection__c</fullName>
    <label>Delay in AHJ Inspection</label>
    <type>Date</type>
</CustomField>