unpackaged/main/default/objects/Case/fields/Delay_in_CR__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_CR__c</fullName>
    <label>Delay in CR</label>
    <type>Date</type>
</CustomField>