unpackaged/main/default/objects/Case/fields/Delay_in_Install__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Install__c</fullName>
    <label>Delay in Install</label>
    <type>Date</type>
</CustomField>