unpackaged/main/default/objects/Case/fields/Delay_in_Interconnetion__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Interconnetion__c</fullName>
    <label>Delay in Interconnetion</label>
    <type>Date</type>
</CustomField>