unpackaged/main/default/objects/Case/fields/Delay_in_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Permitting__c</fullName>
    <label>Delay in Permitting</label>
    <type>Date</type>
</CustomField>