unpackaged/main/default/objects/Case/fields/Delay_in_Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Site_Survey__c</fullName>
    <label>Delay in Site Survey</label>
    <type>Date</type>
</CustomField>