unpackaged/main/default/objects/Case/fields/Delay_in_Utility_Inspection_PTO__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Utility_Inspection_PTO__c</fullName>
    <label>Delay in Utility Inspection/ PTO</label>
    <type>Date</type>
</CustomField>