unpackaged/main/default/objects/Case/fields/Delivery_Deployment_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Deployment_Timeline__c</fullName>
    <description>Draft where, when and how you want this delivered. Trainer will make edits/recommendations based on other projects, urgency of the training/messaging, etc</description>
    <inlineHelpText>Draft where, when and how you want this delivered. Trainer will make edits/recommendations based on other projects, urgency of the training/messaging, etc</inlineHelpText>
    <label>Delivery &amp; Deployment Timeline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>