unpackaged/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Permitting / Inspection</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Business Processing</fullName>
            </value>
            <value>
                <fullName>Interconnection</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Build Partner</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Design/Engineering</fullName>
            </value>
            <value>
                <fullName>Field Ops</fullName>
            </value>
            <value>
                <fullName>Fin Ops</fullName>
            </value>
            <value>
                <fullName>Orginations</fullName>
            </value>
            <value>
                <fullName>Pre-Con</fullName>
            </value>
            <value>
                <fullName>Sales Success</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Transaction Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>