unpackaged/main/default/objects/Case/fields/Department_Notes__c.field-meta.xml
<CustomField>
    <fullName>Department_Notes__c</fullName>
    <label>Department Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>