unpackaged/main/default/objects/Case/fields/Design_Electrical__c.field-meta.xml
<CustomField>
    <fullName>Design_Electrical__c</fullName>
    <label>Design- Electrical</label>
    <type>Date</type>
</CustomField>