unpackaged/main/default/objects/Case/fields/Design_Layout__c.field-meta.xml
<CustomField>
    <fullName>Design_Layout__c</fullName>
    <label>Design- Layout</label>
    <type>Date</type>
</CustomField>