unpackaged/main/default/objects/Case/fields/Design_Structural__c.field-meta.xml
<CustomField>
    <fullName>Design_Structural__c</fullName>
    <label>Design- Structural</label>
    <type>Date</type>
</CustomField>