unpackaged/main/default/objects/Case/fields/Designed_by__c.field-meta.xml
<CustomField>
    <fullName>Designed_by__c</fullName>
    <label>Designed by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exactus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Wattmonk</fullName>
            </value>
            <value>
                <fullName>Finulent</fullName>
            </value>
            <value>
                <fullName>Illumine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>