unpackaged/main/default/objects/Case/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <label>Detractor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of Communication</fullName>
            </value>
            <value>
                <fullName>Incorrect Communication</fullName>
            </value>
            <value>
                <fullName>Poor Customer Service</fullName>
            </value>
            <value>
                <fullName>Timelines</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Sales Tactics</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>