unpackaged/main/default/objects/Case/fields/Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License__c</fullName>
    <label>Drivers License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>