unpackaged/main/default/objects/Case/fields/Electrical_Change__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Change__c</fullName>
    <label>Electrical Change</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>