unpackaged/main/default/objects/Case/fields/Electrical_Red_flag__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Red_flag__c</fullName>
    <label>Electrical Red flag</label>
    <type>TextArea</type>
</CustomField>