unpackaged/main/default/objects/Case/fields/Electrical_Stamp_by__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Stamp_by__c</fullName>
    <label>Electrical Stamp by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Renewables</fullName>
            </value>
            <value>
                <fullName>Exactus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>