unpackaged/main/default/objects/Case/fields/Electrical_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade__c</fullName>
    <label>Electrical Upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Order_Cases</valueSetName>
    </valueSet>
</CustomField>