unpackaged/main/default/objects/Case/fields/Electrical_Upgrade_Cost__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Cost__c</fullName>
    <label>Electrical Upgrade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>