unpackaged/main/default/objects/Case/fields/Electrical_Upgrade_Hard_Quote__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Hard_Quote__c</fullName>
    <label>Electrical Upgrade Hard Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>