unpackaged/main/default/objects/Case/fields/Electrical_Upgrade_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Scheduled_Date__c</fullName>
    <label>Electrical Upgrade Scheduled Date</label>
    <type>Date</type>
</CustomField>