unpackaged/main/default/objects/Case/fields/Electrical_Upgrade_Scope__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Upgrade_Scope__c</fullName>
    <label>Electrical Upgrade Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Panel Swap &gt;150A</fullName>
            </value>
            <value>
                <fullName>Panel Swap &gt;200A</fullName>
            </value>
            <value>
                <fullName>Service Upgrade, &gt;200A overhead</fullName>
            </value>
            <value>
                <fullName>Service Upgrade, &gt;200A underground</fullName>
            </value>
            <value>
                <fullName>Service Upgrade, &gt;400A</fullName>
            </value>
            <value>
                <fullName>Field Listed Supply Side Connection</fullName>
            </value>
            <value>
                <fullName>Gas Main Relocation</fullName>
            </value>
            <value>
                <fullName>Isolated Load Side Tap</fullName>
            </value>
            <value>
                <fullName>Main breaker downsize</fullName>
            </value>
            <value>
                <fullName>Main Breaker Relocation</fullName>
            </value>
            <value>
                <fullName>Main Panel Insert</fullName>
            </value>
            <value>
                <fullName>Meter Relocation Tap</fullName>
            </value>
            <value>
                <fullName>Meter Socket Adapter</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Electrical Work</fullName>
            </value>
            <value>
                <fullName>Renewable Meter Adapter</fullName>
            </value>
            <value>
                <fullName>Sub Panel Insert</fullName>
            </value>
            <value>
                <fullName>Supply Side Connection Breaker</fullName>
            </value>
            <value>
                <fullName>Supply Side Connection Tap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>