unpackaged/main/default/objects/Case/fields/Engineering_Notified__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Notified__c</fullName>
    <label>Engineering Notified</label>
    <type>TextArea</type>
</CustomField>