unpackaged/main/default/objects/Case/fields/Est_First_Year_kWh__c.field-meta.xml
<CustomField>
    <fullName>Est_First_Year_kWh__c</fullName>
    <formula>Job__r.Est_First_Year_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. First Year kWh</label>
    <type>Text</type>
</CustomField>