unpackaged/main/default/objects/Case/fields/Est_Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Est_Payout_Amount__c</fullName>
    <label>Est. Payout Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>