unpackaged/main/default/objects/Case/fields/Estimated_Service_Wire_Length_feet__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Service_Wire_Length_feet__c</fullName>
    <label>Estimated Service Wire Length (feet)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>