unpackaged/main/default/objects/Case/fields/Exceeds_Allowable_Offset__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_Allowable_Offset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3D layout</label>
    <type>Checkbox</type>
</CustomField>