unpackaged/main/default/objects/Case/fields/Exceeds_Allowbale_System_Size__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_Allowbale_System_Size__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2D Layout</label>
    <type>Checkbox</type>
</CustomField>