unpackaged/main/default/objects/Case/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Date</type>
</CustomField>