unpackaged/main/default/objects/Case/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <description>Who will deliver this? If it’s you, do you need trainer support by way of writing/editing, planning, setup, co-facilitation, etc?. Be specific</description>
    <inlineHelpText>Who will deliver this? If it’s you, do you need trainer support by way of writing/editing, planning, setup, co-facilitation, etc?. Be specific</inlineHelpText>
    <label>Facilitator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>