unpackaged/main/default/objects/Case/fields/Fault_Code__c.field-meta.xml
<CustomField>
    <fullName>Fault_Code__c</fullName>
    <label>Fault Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>