unpackaged/main/default/objects/Case/fields/Final_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Amount__c</fullName>
    <label>Final Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>