unpackaged/main/default/objects/Case/fields/Finances__c.field-meta.xml
<CustomField>
    <fullName>Finances__c</fullName>
    <label>Finances</label>
    <type>Date</type>
</CustomField>