unpackaged/main/default/objects/Case/fields/Finances_Retention__c.field-meta.xml
<CustomField>
    <fullName>Finances_Retention__c</fullName>
    <label>Finances</label>
    <type>Date</type>
</CustomField>