unpackaged/main/default/objects/Case/fields/Financier__c.field-meta.xml
<CustomField>
    <fullName>Financier__c</fullName>
    <formula>TEXT ( Opportunity__r.Financing_Tool__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financier</label>
    <type>Text</type>
</CustomField>