unpackaged/main/default/objects/Case/fields/Financing_Tool__c.field-meta.xml
<CustomField>
    <fullName>Financing_Tool__c</fullName>
    <formula>Text(Opportunity__r.Financing_Tool__c)</formula>
    <label>Financing Tool</label>
    <type>Text</type>
</CustomField>