unpackaged/main/default/objects/Case/fields/First_Install_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Install_Amount__c</fullName>
    <label>First Install Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>