unpackaged/main/default/objects/Case/fields/First_Install_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Install_Receive_Date__c</fullName>
    <label>First Install Receive Date</label>
    <type>Date</type>
</CustomField>